# game_project

./: Makefile  main.py  pyproject.toml
games_project_eremin/VD_games/: cli.py
games_project_eremin/VD_games/scripts/: VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  __init__.py  brain_calc.py  vd_prime.py  vd_progression.py
