[project]
name = "games-project-eremin"
version = "0.1.0"
description = "Игровой проект на Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["games_project_eremin/VD_games"]

[project.scripts]
VD-games = "games_project_eremin.VD_games.scripts.VD_main:main"