[project]
name = "games-project-eremin"
version = "0.1.0"
description = "Игровой проект на Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt",
    "ruff>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["games_project_eremin/VD_games"]

[project.scripts]
VD-games = "games_project_eremin.VD_games.scripts.VD_main:main"
VD-even = "games_project_eremin.VD_games.scripts.VD_even:main"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long
    "B008",  # function calls in defaults
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
